--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body{
   background-size: cover; 
   background-position: center; 
   font-family:'Times New Roman', Times, serif;
+  background-color: #062125;
 }
 .header {
   width: 100%;
